--- a/src/Node/Node.css
+++ b/src/Node/Node.css
@@ -1,7 +1,7 @@
 .node {
   width: 25px;
   height: 25px;
-  outline: 1px solid rgb(91, 170, 206);
+  border: 1px solid rgb(176, 228, 231);
   display: inline-block;
   background-color: rgb(245, 254, 255);
 }
@@ -16,7 +16,7 @@
 
 .node-visited {
   animation-name: visitedAnimation;
-  animation-duration: 1.5s;
+  animation-duration: 1s;
   animation-timing-function: ease-out;
   animation-delay: 0;
   animation-direction: alternate;
@@ -28,31 +28,76 @@
 @keyframes visitedAnimation {
   0% {
     transform: scale(0.3);
-    background-color: rgba(2, 154, 255, 0.75);
-    border-radius: 100%;
+    background-color: rgba(4, 120, 187, 0.75);
+    border: 1px solid rgba(4, 120, 187, 0.75);
+    border-radius: 50%;
   }
 
-  50% {
-    background-color: rgba(70, 253, 253, 0.75);
+  40% {
+    transform: scale(0.4);
+    box-shadow: 1px 1px 1px rgb(227, 0, 247);
+    background-color: rgba(70, 149, 253, 0.75);
+    border: 1px solid rgba(70, 149, 253, 0.75);
+    border-radius: 30%;
   }
 
-  75% {
-    transform: scale(1.2);
-    background-color: rgba(91, 217, 255, 0.75);
+  45% {
+    transform: scale(0.8);
+    box-shadow: 1px 1px 1px rgb(247, 0, 206);
+    background-color: rgba(91, 255, 233, 0.75);
+    border: 1px solid rgba(91, 255, 233, 0.75);
   }
+  80% {
+    transform: scale(1);
+    background-color: rgba(0, 252, 218, 0.75);
+    border: 1px solid rgba(0, 252, 218, 0.75);
+    box-shadow: 1px 1px 1px rgb(206, 0, 247);
+    box-shadow: none;
+  }
+  90% {
+    transform: scale(1.3);
+    background-color: rgba(0, 214, 252, 0.75);
+    border: 1px solid rgba(0, 214, 252, 0.75);
+  }
+
   100% {
     transform: scale(1);
-    background-color: rgba(0, 180, 252, 0.75);
+    background-color: rgb(10, 203, 252);
+    box-shadow: none;
+    border: 1px solid rgb(33, 211, 255);
   }
 }
 
 .node-wall {
-  background-color: rgb(48, 80, 187);
+  background-color: rgb(49, 142, 165);
+  border: 1px solid rgb(49, 142, 165);
+  animation-name: wallAnim;
+  animation-duration: 1s;
+  animation-timing-function: ease-in;
+  animation-delay: 0;
+}
+
+@keyframes wallAnim {
+  0% {
+    opacity: 0.6;
+    border: 1px solid rgb(49, 142, 165);
+  }
+  30% {
+    background-color: rgb(72, 175, 179);
+    opacity: 1;
+    border: 1px solid rgb(72, 175, 179);
+  }
+
+  75% {
+    opacity: 1;
+    background-color: rgb(83, 187, 201);
+    border: 1px solid rgb(83, 187, 201);
+  }
 }
 .node-shortest-path {
   background-color: rgb(255, 254, 106);
   animation-name: shortestPath;
-  animation-duration: 1.5s;
+  animation-duration: 0.5s;
   animation-timing-function: ease-out;
   animation-delay: 0;
   animation-direction: alternate;
@@ -63,12 +108,8 @@
 
 @keyframes shortestPath {
   0% {
-    transform: scale(0.6);
+    transform: scale(0.7);
     background-color: rgb(254, 200, 100);
-  }
-
-  30% {
-    transform: scale(0.8);
   }
 
   50% {
@@ -76,7 +117,8 @@
   }
 
   100% {
-    transform: scale(1.1);
-    background-color: rgb(233, 179, 64);
+    transform: scale(1);
+    background-color: rgb(255, 190, 70);
+    border: 1px solid rgb(245, 190, 70);
   }
 }
