clear button handles starts and finish

--- a/src/Node/Node.css
+++ b/src/Node/Node.css
@@ -14,6 +14,10 @@
   background-color: rgba(2, 154, 255, 0.75);
 }
 
+.node-dummy {
+  background-color: black;
+}
+
 .node-visited {
   animation-name: visitedAnimation;
   animation-duration: 1s;
